src/test/ui/generics/generic-arg-mismatch-recover.stderr
error[E0107]: wrong number of lifetime arguments: expected 1, found 2
  --> $DIR/generic-arg-mismatch-recover.rs:6:20
   |
LL |     Foo::<'static, 'static, ()>(&0);
   |                    ^^^^^^^ unexpected lifetime argument

error[E0107]: wrong number of lifetime arguments: expected 1, found 2
  --> $DIR/generic-arg-mismatch-recover.rs:8:20
   |
LL |     Bar::<'static, 'static, ()>(&());
   |                    ^^^^^^^ unexpected lifetime argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/generic-arg-mismatch-recover.rs:8:29
   |
LL |     Bar::<'static, 'static, ()>(&());
   |                             ^^ unexpected type argument

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0107`.
